test/good/lambdas/lambda10.px

func f(n: Int, g: Int->[Char]): [Char] def
    return g(n)

a = [c for c in "abcde"]
print f(-2, a[_:])
print f(3, a[:_])
print f(-3, a[::_])
