test/bad/lambdas/partial01.px

func f(g: String->String): Void def
    return

f(write@(_))
